feat: Add get my user info user controller
